feat: 主题设置和切换

--- a/src/assets/style/themes.scss
+++ b/src/assets/style/themes.scss
@@ -1,18 +1,28 @@
 $themes: (
   light: (
-    color-home-bg: rgb(194, 174, 174),
-    color-blue: #4343e4,
+    color-home-bg: #f0eff4,
+    color-blue: #3477f5,
     color-gird-bg: #fff,
-    color-text: #fff,
+    color-count: #000,
+    color-text: #878787,    
+    color-search-text: #3477f5,
+    color-search-bg: #e0dfe4,
+    color-search-icon: #767676,
+    color-search-placeholder: #808082,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
   ),
   dark: (
     color-home-bg: #000,
-    color-blue: #4343e4,
-    color-gird-bg: rgb(81, 71, 71),
-    color-text: #000,
+    color-blue: #316af6,
+    color-gird-bg: #1a1a1a,
+    color-count: #fff,
+    color-text: #8c8c8c,
+    color-search-text: #fff,
+    color-search-bg: #1a1a1a,
+    color-search-icon: #929292,
+    color-search-placeholder: #808082,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
