--- a/src/assets/style/themes.scss
+++ b/src/assets/style/themes.scss
@@ -4,11 +4,17 @@ $themes: (
     color-blue: #3477f5,
     color-gird-bg: #fff,
     color-count: #000,
-    color-text: #878787,    
-    color-search-text: #3477f5,
+    color-text: #878787,   
+    color-caret: #3477f5, 
+    color-search-text: #000,
     color-search-bg: #e0dfe4,
     color-search-icon: #767676,
     color-search-placeholder: #808082,
+    color-create-bg: #f0eff4,
+    color-create-text: #000,
+    color-create-text-d: #bfbfbf,
+    color-create-line: #c9c9c9,
+    color-create-input-bg: #fff,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
@@ -19,10 +25,16 @@ $themes: (
     color-gird-bg: #1a1a1a,
     color-count: #fff,
     color-text: #8c8c8c,
+    color-caret: #fff,
     color-search-text: #fff,
     color-search-bg: #1a1a1a,
     color-search-icon: #929292,
     color-search-placeholder: #808082,
+    color-create-bg: #1a1a1a,
+    color-create-text: #fff,
+    color-create-text-d: #5c5c5c,
+    color-create-line: #393939,
+    color-create-input-bg: #272727,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
