feat: 详情页数据渲染

--- a/src/assets/style/themes.scss
+++ b/src/assets/style/themes.scss
@@ -15,6 +15,7 @@ $themes: (
     color-create-text-d: #bfbfbf,
     color-create-line: #c9c9c9,
     color-create-input-bg: #fff,
+    color-list-bg:#fff,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
@@ -35,6 +36,7 @@ $themes: (
     color-create-text-d: #5c5c5c,
     color-create-line: #393939,
     color-create-input-bg: #272727,
+    color-list-bg:#000,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
