--- a/src/assets/style/themes.scss
+++ b/src/assets/style/themes.scss
@@ -16,6 +16,7 @@ $themes: (
     color-create-line: #c9c9c9,
     color-create-input-bg: #fff,
     color-list-bg:#fff,
+    color-checkbox-border: #c5c5c5,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
@@ -37,6 +38,7 @@ $themes: (
     color-create-line: #393939,
     color-create-input-bg: #272727,
     color-list-bg:#000,
+    color-checkbox-border: #464646,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
