feat: 待办列表旗标&&取消旗标完成待优化

--- a/src/assets/style/themes.scss
+++ b/src/assets/style/themes.scss
@@ -17,6 +17,9 @@ $themes: (
     color-create-input-bg: #fff,
     color-list-bg:#fff,
     color-checkbox-border: #c5c5c5,
+    color-btn-detail: #c7c6ca,
+    color-btn-favorite: #e59d4d,
+    color-btn-delete: #d95847,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
@@ -39,6 +42,9 @@ $themes: (
     color-create-input-bg: #272727,
     color-list-bg:#000,
     color-checkbox-border: #464646,
+    color-btn-detail: #484848,
+    color-btn-favorite: #e5a752,
+    color-btn-delete: #da5f4e,
     color-text-d: rgba(255, 255, 255, 0.3),
     color-text-l: rgba(255, 255, 255, 0.5),
     color-text-ll: rgba(255, 255, 255, 0.8),
