chore: 换肤增加动画过渡

--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -7,7 +7,8 @@ body, html {
     -webkit-tap-highlight-color: transparent;
     min-height: 100vh;
     width: 100%;
-    @include background_color("color-home-bg");     
+    @include background_color("color-home-bg"); 
+    transition: background-color 0.3s ease;
 }
 .icon {
     width: 2rem;
